; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_spa_misc.c_spa_import_progress_init.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_spa_misc.c_spa_import_progress_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_5__, i64 }
%struct.TYPE_5__ = type { %struct.TYPE_4__* }

@KM_SLEEP = common dso_local global i32 0, align 4
@spa_import_progress_list = common dso_local global %struct.TYPE_4__* null, align 8
@.str = private unnamed_addr constant [4 x i8] c"zfs\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"import_progress\00", align 1
@spa_import_progress_show = common dso_local global i32 0, align 4
@spa_import_progress_show_header = common dso_local global i32 0, align 4
@spa_import_progress_t = common dso_local global i32 0, align 4
@smh_node = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @spa_import_progress_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @spa_import_progress_init() #0 {
  %1 = load i32, i32* @KM_SLEEP, align 4
  %2 = call %struct.TYPE_4__* @kmem_zalloc(i32 4, i32 %1)
  store %struct.TYPE_4__* %2, %struct.TYPE_4__** @spa_import_progress_list, align 8
  %3 = load %struct.TYPE_4__*, %struct.TYPE_4__** @spa_import_progress_list, align 8
  %4 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 1
  store i64 0, i64* %4, align 8
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** @spa_import_progress_list, align 8
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** @spa_import_progress_list, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  store %struct.TYPE_4__* %5, %struct.TYPE_4__** %8, align 8
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** @spa_import_progress_list, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load i32, i32* @spa_import_progress_show, align 4
  %12 = load i32, i32* @spa_import_progress_show_header, align 4
  %13 = load i32, i32* @spa_import_progress_t, align 4
  %14 = load i32, i32* @smh_node, align 4
  %15 = call i32 @offsetof(i32 %13, i32 %14)
  %16 = call i32 @procfs_list_install(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0), i32 420, %struct.TYPE_5__* %10, i32 %11, i32 %12, i32* null, i32 %15)
  ret void
}

declare dso_local %struct.TYPE_4__* @kmem_zalloc(i32, i32) #1

declare dso_local i32 @procfs_list_install(i8*, i8*, i32, %struct.TYPE_5__*, i32, i32, i32*, i32) #1

declare dso_local i32 @offsetof(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
